--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,5 +10,10 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
+  <script src="https://code.jquery.com/jquery-1.10.2.js" integrity="sha256-it5nQKHTz+34HijZJQkpNBIHsjpV8b6QzMJs9tmOBSo="
+    crossorigin="anonymous"></script>
+  <script src="./assets/js/jquery-ui.js"></script>
+  <script src="./assets/js/jquery.ui.touch-punch.js"></script>
 </body>
 </html>
