--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Drello</title>
+  <title>Generic Task Manager</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,10 +10,10 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js" integrity="sha256-it5nQKHTz+34HijZJQkpNBIHsjpV8b6QzMJs9tmOBSo="
-    crossorigin="anonymous"></script>
-  <script src="./assets/js/jquery-ui.js"></script>
-  <script src="./assets/js/jquery.ui.touch-punch.js"></script>
+
+  <!-- 1. Load libraries -->
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <script src="assets/js/jquery.ui.touch-punch.js"></script>
 </body>
 </html>
